Bug 364858 - Regression: Re-add a decent way of displaying what files baloo is indexing / extracting
Summary: Regression: Re-add a decent way of displaying what files baloo is indexing / ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-baloo
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR grave
Target Milestone: ---
Assignee: Pinak Ahuja
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-28 14:32 UTC by Christian (Fuchs)
Modified: 2018-10-08 22:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.52
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2016-06-28 14:32:32 UTC
These days I, again, had an issue with baloo_file_extractor eating all of my CPU and a lot of my RAM. 

It is, at least as far as I was able to tell, completely impossible to debug that, as baloo no longer prints out what file it is currently indexing / extracting, and lsof and the likes also don't help. 

Please re-add a way to display this, whether it being the inode numbers being displayed in ps as it used to be or via balooctl or whatever else.

For now the only solution was to, again, completely disable baloo file indexing.

Reproducible: Always

Steps to Reproduce:
1. Have baloo eat your CPU
2. Try to find out why 

Actual Results:  
You can't

Expected Results:  
You can
Comment 1 Igor Poboiko 2018-10-08 22:16:25 UTC
Git commit a9696978322c08d19ece0a67f430aee391e3918d by Igor Poboiko.
Committed on 08/10/2018 at 22:16.
Pushed by poboiko into branch 'master'.

[balooctl] Print current state & indexing file when monitor starts

Summary:
This is based on {D15943}.
Simply print current state & file when monitor starts.
FIXED-IN: 5.52

Test Plan:
`balooctl monitor` now prints
```
Press ctrl+c to stop monitoring
File indexer is running
Idle
```

Reviewers: #baloo, #frameworks, bruns, ngraham

Reviewed By: #baloo, bruns, ngraham

Subscribers: ngraham, bruns

Differential Revision: https://phabricator.kde.org/D15985

M  +5    -0    src/tools/balooctl/monitorcommand.cpp

https://commits.kde.org/baloo/a9696978322c08d19ece0a67f430aee391e3918d