[balooctl] Print current state & indexing file when monitor starts

Summary:
This is based on {D15943}.
Simply print current state & file when monitor starts.

BUG: 364858
FIXED-IN: 5.52

Test Plan:
`balooctl monitor` now prints
```
Press ctrl+c to stop monitoring
File indexer is running
Idle
```

Reviewers: #baloo, #frameworks, bruns, ngraham

Reviewed By: #baloo, bruns, ngraham

Subscribers: ngraham, bruns

Differential Revision: https://phabricator.kde.org/D15985